fixed TechList overflow

--- a/src/components/organisms/TechnologyList/TechnologyList.module.scss
+++ b/src/components/organisms/TechnologyList/TechnologyList.module.scss
@@ -5,7 +5,8 @@
 	display: flex;
 	flex-direction: row;
   flex-wrap: wrap;
-	gap: 1.5rem;
+	gap: 1.6rem;
+	overflow: hidden;
 }
 
 .card {
